fixed menu buttons on mobile

--- a/rileysite/static/css/style.css
+++ b/rileysite/static/css/style.css
@@ -60,8 +60,9 @@ body {
 }
 
 footer {
-	align-items: center;
-	padding: 0.4rem 0.6rem 0.3rem 0.6rem;
+	display: flex;
+	flex-direction: column-reverse;
+	padding: 0.4rem 0rem 0.3rem 0rem;
 }
 
 #nextperformance {
@@ -122,6 +123,16 @@ footer {
 	justify-content: space-between;
 }
 
+.navlinkobject {
+	display: flex;
+	flex-grow: 1;
+}
+
+.navlinkobject a span {
+	width: 80px;
+	text-align: center;
+}
+
 .navbutton {
 	font-size: 1.2rem;
 	padding: 0.3rem 1rem 0.45rem 1rem;
@@ -160,30 +171,30 @@ table tr td span {
 	margin-left: -1rem;
 }
 
-table tr td button, #learnmorelink {
+table tr td button, .learnmorelink {
 	color: #9b9093;
 	border: 1px dashed #9b9093;
 	border-radius: 0;
 	background-color: transparent;
 }
 
-table tr td button:hover, #learnmorelink:hover {
+table tr td button:hover, .learnmorelink:hover {
 	color: #bdb0b4;
 	border: 1px dashed #bdb0b4 !important;
 }
 
-table tr td button a, #learnmorelink a {
+table tr td button a, .learnmorelink a {
 	color: #9b9093;
 	text-decoration: none;
 	font-size: 1rem;
 	font-family: 'SimSun', monospace;
 }
 
-table tr td button a:visited, #learnmorelink a:visited {
+table tr td button a:visited, .learnmorelink a:visited {
 	color: #9b9093;
 }
 
-table tr td button a:hover, #learnmorelink a:hover {
+table tr td button a:hover, .learnmorelink a:hover {
 	color: #bdb0b4 !important;
 }
 
@@ -322,7 +333,7 @@ h2 {
 	text-justify: inter-word;
 }
 
-#learnmorelink {
+.learnmorelink {
 
 }
 
@@ -345,6 +356,7 @@ h2 {
 @media only screen and (max-width: 1400px) {
 	body {
 		flex-direction: column;
+		min-height: 130vh;
 	}
 	#navpane {
 		display: none;
@@ -394,6 +406,7 @@ h2 {
     }
 	#navlinksectionmain {
 		flex-direction: column;
+		padding: 0rem 0.5rem 0rem 0.5rem;
 	}
 	#perfloc {
 		display: none;
@@ -418,7 +431,7 @@ h2 {
 		margin-right: 1rem;
 	}
 	.navbutton {
-		margin: 0.2rem 1rem 0.2rem 1rem;
+		margin: 0.2rem 0.5rem 0.2rem 0.5rem;
 	}
 	#ceresfootnote {
 		margin: 0rem 1rem 0rem 1rem;
@@ -426,5 +439,4 @@ h2 {
 	h2, #title {
 		filter: blur(0.01rem) drop-shadow(0 0 0.1rem light-dark(#c0c0c0, #141414));
 	}
-
 }
